# json_srv

./: .gitignore  CMakeLists.txt
src/main/c/: main.cpp
src/main/c/aeron/: aeron_alloc.c
src/main/java/client/: SrvExClient.java
